// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup renders correctly when disabled 1`] = `
<div
  className="groupComponent monday-style-button-group-component secondary monday-style-button-group-component--kind-secondary disabled"
>
  <div
    aria-disabled={true}
    aria-label=""
    className="groupComponentButtonsContainer monday-style-button-group-component__buttons-container"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text disabled button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text disabled button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text disabled button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text disabled button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly when disabled 2`] = `
<div
  className="groupComponent monday-style-button-group-component secondary monday-style-button-group-component--kind-secondary"
>
  <div
    aria-disabled={false}
    aria-label="as"
    className="groupComponentButtonsContainer monday-style-button-group-component__buttons-container"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly with TERTIARY kind  1`] = `
<div
  className="groupComponent monday-style-button-group-component tertiary monday-style-button-group-component--kind-tertiary"
>
  <div
    aria-disabled={false}
    aria-label=""
    className="groupComponentButtonsContainer monday-style-button-group-component__buttons-container"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly with componentClassName 1`] = `
<div
  className="groupComponent monday-style-button-group-component testClassName secondary monday-style-button-group-component--kind-secondary"
>
  <div
    aria-disabled={false}
    aria-label=""
    className="groupComponentButtonsContainer monday-style-button-group-component__buttons-container"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly with large size 1`] = `
<div
  className="groupComponent monday-style-button-group-component secondary monday-style-button-group-component--kind-secondary"
>
  <div
    aria-disabled={false}
    aria-label=""
    className="groupComponentButtonsContainer monday-style-button-group-component__buttons-container"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeLarge monday-style-button--size-large kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeLarge monday-style-button--size-large kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeLarge monday-style-button--size-large kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeLarge monday-style-button--size-large kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly with name 1`] = `
<div
  className="groupComponent monday-style-button-group-component secondary monday-style-button-group-component--kind-secondary"
>
  <div
    aria-disabled={false}
    aria-label=""
    className="groupComponentButtonsContainer monday-style-button-group-component__buttons-container"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly with value 1`] = `
<div
  className="groupComponent monday-style-button-group-component secondary monday-style-button-group-component--kind-secondary"
>
  <div
    aria-disabled={false}
    aria-label=""
    className="groupComponentButtonsContainer monday-style-button-group-component__buttons-container"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text selected button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary colorPrimaryActive monday-style-button--color-primary-active rightFlat monday-style-button--right-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="optionText monday-style-button-group-component__option-text button monday-style-button sizeSmall monday-style-button--size-small kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation"
      data-testid="button-group"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;
